AES technically done

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ md5 = "0.7.0"
 hex = "0.4.3"
 rc4 = "0.1.0"
 aes = "0.8.1"
+cbc = "0.1.2"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
