--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["cdylib", "rlib"]
 
 [features]
 # default = ["console_error_panic_hook", "wee_alloc"]
-default = ["console_error_panic_hook", "wee_alloc"]
+default = ["wee_alloc"]
 
 [dependencies]
 wasm-bindgen = "0.2.63"
