--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "decrypt-pdf-stream"
 version = "0.1.7"
-authors = ["Gonzalo <gonzaloburgosdelahera@|gmail.com>"]
+authors = ["Gonzalo <gonzaloburgosdelahera@gmail.com>"]
 edition = "2018"
 repository = "https://github.com/Ausinero33/decrypt-pdf-stream/"
 
