--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,11 @@ default = ["wee_alloc"]
 wasm-bindgen = "0.2.63"
 md5 = "0.7.0"
 hex = "0.4.3"
-rc4 = "0.1.0"
 aes = "0.8.1"
 cbc = "0.1.2"
 rand = "0.8.5"
 getrandom = {version = "0.2.7", features = ["js"]}
+rust-crypto-wasm = "0.3.1"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
