--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,7 @@ repository = "https://github.com/Ausinero33/decrypt-pdf-stream/"
 crate-type = ["cdylib", "rlib"]
 
 [features]
-# default = ["wee_alloc"]
-default = ["console_error_panic_hook", "wee_alloc"]
+# default = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = "0.2.63"
@@ -28,11 +27,6 @@ flate2 = "1.0.24"
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.6", optional = true }
-
-# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
-# compared to the default allocator's ~10K. It is slower than the default
-# allocator, however.
-wee_alloc = { version = "0.4.5", optional = true }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
