--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/Ausinero33/decrypt-pdf-stream/"
 crate-type = ["cdylib", "rlib"]
 
 [features]
-# default = ["console_error_panic_hook"]
+default = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = "0.2.63"
@@ -21,6 +21,7 @@ rand = "0.8.5"
 getrandom = {version = "0.2.7", features = ["js"]}
 rust-crypto-wasm = "0.3.1"
 flate2 = "1.0.24"
+lazy_static = "1.4.0"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
